# app/controllers/auth_controller.rb
@@ -20,9 +20,21 @@ class AuthController < ApplicationController
     end
   end
 
+  def logout
+    token = request.headers["Authorization"]&.split(" ")&.last
+    if token
+      decoded = JsonWebToken.decode(token)
+      exp = decoded ? Time.at(decoded[:exp]) : 24.hours.from_now
+      Rails.cache.write("blacklist_#{token}", true, expires_in: (exp - Time.now))
+      render json: { message: "Logged out successfully" }
+    else
+      render json: { error: "Missing token" }, status: :bad_request
+    end
+  end
+
   private
 
   def user_params
-    params.permit(:email, :password)
+    params.permit(:email, :password, :full_name, :role)
   end
 end
